# serializer version: 1
# name: test_bound_with_nan_components[bound0-lower-IntegerVariable]
  '''
  1 validation error for IntegerVariable
    Value error, The following lower bound component is not a number: nan (index 0). [type=value_error, input_value={'size': 1, 'lower_bound': array([nan])}, input_type=dict]
      For further information visit https://errors.pydantic.dev/X.Y/v/value_error
  '''
# ---
# name: test_bound_with_nan_components[bound0-lower-RealVariable]
  '''
  1 validation error for RealVariable
    Value error, The following lower bound component is not a number: nan (index 0). [type=value_error, input_value={'size': 1, 'lower_bound': array([nan])}, input_type=dict]
      For further information visit https://errors.pydantic.dev/X.Y/v/value_error
  '''
# ---
# name: test_bound_with_nan_components[bound0-upper-IntegerVariable]
  '''
  1 validation error for IntegerVariable
    Value error, The following upper bound component is not a number: nan (index 0). [type=value_error, input_value={'size': 1, 'upper_bound': array([nan])}, input_type=dict]
      For further information visit https://errors.pydantic.dev/X.Y/v/value_error
  '''
# ---
# name: test_bound_with_nan_components[bound0-upper-RealVariable]
  '''
  1 validation error for RealVariable
    Value error, The following upper bound component is not a number: nan (index 0). [type=value_error, input_value={'size': 1, 'upper_bound': array([nan])}, input_type=dict]
      For further information visit https://errors.pydantic.dev/X.Y/v/value_error
  '''
# ---
# name: test_bound_with_nan_components[bound1-lower-IntegerVariable]
  '''
  1 validation error for IntegerVariable
    Value error, The following lower bound components are not numbers: nan (index 0) and nan (index 1). [type=value_error, input_value={'size': 2, 'lower_bound': array([nan, nan])}, input_type=dict]
      For further information visit https://errors.pydantic.dev/X.Y/v/value_error
  '''
# ---
# name: test_bound_with_nan_components[bound1-lower-RealVariable]
  '''
  1 validation error for RealVariable
    Value error, The following lower bound components are not numbers: nan (index 0) and nan (index 1). [type=value_error, input_value={'size': 2, 'lower_bound': array([nan, nan])}, input_type=dict]
      For further information visit https://errors.pydantic.dev/X.Y/v/value_error
  '''
# ---
# name: test_bound_with_nan_components[bound1-upper-IntegerVariable]
  '''
  1 validation error for IntegerVariable
    Value error, The following upper bound components are not numbers: nan (index 0) and nan (index 1). [type=value_error, input_value={'size': 2, 'upper_bound': array([nan, nan])}, input_type=dict]
      For further information visit https://errors.pydantic.dev/X.Y/v/value_error
  '''
# ---
# name: test_bound_with_nan_components[bound1-upper-RealVariable]
  '''
  1 validation error for RealVariable
    Value error, The following upper bound components are not numbers: nan (index 0) and nan (index 1). [type=value_error, input_value={'size': 2, 'upper_bound': array([nan, nan])}, input_type=dict]
      For further information visit https://errors.pydantic.dev/X.Y/v/value_error
  '''
# ---
# name: test_copy_and_pickle_keep_the_kind[DiscreteVariable]
  'cannot set WRITEABLE flag to True of this array'
# ---
# name: test_copy_and_pickle_keep_the_kind[DiscreteVariable].1
  'cannot set WRITEABLE flag to True of this array'
# ---
# name: test_copy_and_pickle_keep_the_kind[IntegerVariable]
  'cannot set WRITEABLE flag to True of this array'
# ---
# name: test_copy_and_pickle_keep_the_kind[IntegerVariable].1
  'cannot set WRITEABLE flag to True of this array'
# ---
# name: test_copy_and_pickle_keep_the_kind[RealVariable]
  'cannot set WRITEABLE flag to True of this array'
# ---
# name: test_copy_and_pickle_keep_the_kind[RealVariable].1
  'cannot set WRITEABLE flag to True of this array'
# ---
# name: test_data_type_from_a_non_string
  "array('float', dtype='<U5') is not a valid DataType"
# ---
# name: test_frozen[DiscreteVariable-lower_bound]
  '''
  1 validation error for DiscreteVariable
  lower_bound
    Instance is frozen [type=frozen_instance, input_value=0, input_type=int]
      For further information visit https://errors.pydantic.dev/X.Y/v/frozen_instance
  '''
# ---
# name: test_frozen[DiscreteVariable-upper_bound]
  '''
  1 validation error for DiscreteVariable
  upper_bound
    Instance is frozen [type=frozen_instance, input_value=0, input_type=int]
      For further information visit https://errors.pydantic.dev/X.Y/v/frozen_instance
  '''
# ---
# name: test_frozen[IntegerVariable-lower_bound]
  '''
  1 validation error for IntegerVariable
  lower_bound
    Instance is frozen [type=frozen_instance, input_value=0, input_type=int]
      For further information visit https://errors.pydantic.dev/X.Y/v/frozen_instance
  '''
# ---
# name: test_frozen[IntegerVariable-upper_bound]
  '''
  1 validation error for IntegerVariable
  upper_bound
    Instance is frozen [type=frozen_instance, input_value=0, input_type=int]
      For further information visit https://errors.pydantic.dev/X.Y/v/frozen_instance
  '''
# ---
# name: test_frozen[RealVariable-lower_bound]
  '''
  1 validation error for RealVariable
  lower_bound
    Instance is frozen [type=frozen_instance, input_value=0, input_type=int]
      For further information visit https://errors.pydantic.dev/X.Y/v/frozen_instance
  '''
# ---
# name: test_frozen[RealVariable-upper_bound]
  '''
  1 validation error for RealVariable
  upper_bound
    Instance is frozen [type=frozen_instance, input_value=0, input_type=int]
      For further information visit https://errors.pydantic.dev/X.Y/v/frozen_instance
  '''
# ---
# name: test_invalid_bound_size[lower-IntegerVariable]
  '''
  1 validation error for IntegerVariable
    Value error, The lower bound should be of size 1. [type=value_error, input_value={'lower_bound': [0, 0]}, input_type=dict]
      For further information visit https://errors.pydantic.dev/X.Y/v/value_error
  '''
# ---
# name: test_invalid_bound_size[lower-RealVariable]
  '''
  1 validation error for RealVariable
    Value error, The lower bound should be of size 1. [type=value_error, input_value={'lower_bound': [0, 0]}, input_type=dict]
      For further information visit https://errors.pydantic.dev/X.Y/v/value_error
  '''
# ---
# name: test_invalid_bound_size[upper-IntegerVariable]
  '''
  1 validation error for IntegerVariable
    Value error, The upper bound should be of size 1. [type=value_error, input_value={'upper_bound': [0, 0]}, input_type=dict]
      For further information visit https://errors.pydantic.dev/X.Y/v/value_error
  '''
# ---
# name: test_invalid_bound_size[upper-RealVariable]
  '''
  1 validation error for RealVariable
    Value error, The upper bound should be of size 1. [type=value_error, input_value={'upper_bound': [0, 0]}, input_type=dict]
      For further information visit https://errors.pydantic.dev/X.Y/v/value_error
  '''
# ---
# name: test_invalid_bound_value_scalar[lower-IntegerVariable]
  '''
  6 validation errors for IntegerVariable
  lower_bound.chain[is-instance[ndarray],function-plain[validate()]]
    Input should be an instance of ndarray [type=is_instance_of, input_value=1j, input_type=complex]
      For further information visit https://errors.pydantic.dev/X.Y/v/is_instance_of
  lower_bound.chain[is-instance[ndarray],function-plain[validate()]]
    Input should be an instance of ndarray [type=is_instance_of, input_value=1j, input_type=complex]
      For further information visit https://errors.pydantic.dev/X.Y/v/is_instance_of
  lower_bound.list[union[int,float]]
    Input should be a valid list [type=list_type, input_value=1j, input_type=complex]
      For further information visit https://errors.pydantic.dev/X.Y/v/list_type
  lower_bound.tuple[union[int,float]]
    Input should be a valid tuple [type=tuple_type, input_value=1j, input_type=complex]
      For further information visit https://errors.pydantic.dev/X.Y/v/tuple_type
  lower_bound.int
    Input should be a valid integer [type=int_type, input_value=1j, input_type=complex]
      For further information visit https://errors.pydantic.dev/X.Y/v/int_type
  lower_bound.float
    Input should be a valid number [type=float_type, input_value=1j, input_type=complex]
      For further information visit https://errors.pydantic.dev/X.Y/v/float_type
  '''
# ---
# name: test_invalid_bound_value_scalar[lower-RealVariable]
  '''
  6 validation errors for RealVariable
  lower_bound.chain[is-instance[ndarray],function-plain[validate()]]
    Input should be an instance of ndarray [type=is_instance_of, input_value=1j, input_type=complex]
      For further information visit https://errors.pydantic.dev/X.Y/v/is_instance_of
  lower_bound.chain[is-instance[ndarray],function-plain[validate()]]
    Input should be an instance of ndarray [type=is_instance_of, input_value=1j, input_type=complex]
      For further information visit https://errors.pydantic.dev/X.Y/v/is_instance_of
  lower_bound.list[union[int,float]]
    Input should be a valid list [type=list_type, input_value=1j, input_type=complex]
      For further information visit https://errors.pydantic.dev/X.Y/v/list_type
  lower_bound.tuple[union[int,float]]
    Input should be a valid tuple [type=tuple_type, input_value=1j, input_type=complex]
      For further information visit https://errors.pydantic.dev/X.Y/v/tuple_type
  lower_bound.int
    Input should be a valid integer [type=int_type, input_value=1j, input_type=complex]
      For further information visit https://errors.pydantic.dev/X.Y/v/int_type
  lower_bound.float
    Input should be a valid number [type=float_type, input_value=1j, input_type=complex]
      For further information visit https://errors.pydantic.dev/X.Y/v/float_type
  '''
# ---
# name: test_invalid_bound_value_scalar[upper-IntegerVariable]
  '''
  6 validation errors for IntegerVariable
  upper_bound.chain[is-instance[ndarray],function-plain[validate()]]
    Input should be an instance of ndarray [type=is_instance_of, input_value=1j, input_type=complex]
      For further information visit https://errors.pydantic.dev/X.Y/v/is_instance_of
  upper_bound.chain[is-instance[ndarray],function-plain[validate()]]
    Input should be an instance of ndarray [type=is_instance_of, input_value=1j, input_type=complex]
      For further information visit https://errors.pydantic.dev/X.Y/v/is_instance_of
  upper_bound.list[union[int,float]]
    Input should be a valid list [type=list_type, input_value=1j, input_type=complex]
      For further information visit https://errors.pydantic.dev/X.Y/v/list_type
  upper_bound.tuple[union[int,float]]
    Input should be a valid tuple [type=tuple_type, input_value=1j, input_type=complex]
      For further information visit https://errors.pydantic.dev/X.Y/v/tuple_type
  upper_bound.int
    Input should be a valid integer [type=int_type, input_value=1j, input_type=complex]
      For further information visit https://errors.pydantic.dev/X.Y/v/int_type
  upper_bound.float
    Input should be a valid number [type=float_type, input_value=1j, input_type=complex]
      For further information visit https://errors.pydantic.dev/X.Y/v/float_type
  '''
# ---
# name: test_invalid_bound_value_scalar[upper-RealVariable]
  '''
  6 validation errors for RealVariable
  upper_bound.chain[is-instance[ndarray],function-plain[validate()]]
    Input should be an instance of ndarray [type=is_instance_of, input_value=1j, input_type=complex]
      For further information visit https://errors.pydantic.dev/X.Y/v/is_instance_of
  upper_bound.chain[is-instance[ndarray],function-plain[validate()]]
    Input should be an instance of ndarray [type=is_instance_of, input_value=1j, input_type=complex]
      For further information visit https://errors.pydantic.dev/X.Y/v/is_instance_of
  upper_bound.list[union[int,float]]
    Input should be a valid list [type=list_type, input_value=1j, input_type=complex]
      For further information visit https://errors.pydantic.dev/X.Y/v/list_type
  upper_bound.tuple[union[int,float]]
    Input should be a valid tuple [type=tuple_type, input_value=1j, input_type=complex]
      For further information visit https://errors.pydantic.dev/X.Y/v/tuple_type
  upper_bound.int
    Input should be a valid integer [type=int_type, input_value=1j, input_type=complex]
      For further information visit https://errors.pydantic.dev/X.Y/v/int_type
  upper_bound.float
    Input should be a valid number [type=float_type, input_value=1j, input_type=complex]
      For further information visit https://errors.pydantic.dev/X.Y/v/float_type
  '''
# ---
# name: test_model_copy_with_another_type[IntegerVariable-real]
  '''
  1 validation error for IntegerVariable
    Value error, type is read-only; the inputs of a IntegerVariable are lower_bound, size and upper_bound. [type=value_error, input_value={'size': 2, 'lower_bound'...<DataType.REAL: 'real'>}, input_type=dict]
      For further information visit https://errors.pydantic.dev/X.Y/v/value_error
  '''
# ---
# name: test_model_copy_with_another_type[RealVariable-integer]
  '''
  1 validation error for RealVariable
    Value error, type is read-only; the inputs of a RealVariable are lower_bound, size and upper_bound. [type=value_error, input_value={'size': 2, 'lower_bound'...ype.INTEGER: 'integer'>}, input_type=dict]
      For further information visit https://errors.pydantic.dev/X.Y/v/value_error
  '''
# ---
# name: test_model_copy_with_inconsistent_update[IntegerVariable]
  '''
  1 validation error for IntegerVariable
    Value error, The lower bound should be of size 5. [type=value_error, input_value={'size': 5, 'lower_bound'...r_bound': array([1, 1])}, input_type=dict]
      For further information visit https://errors.pydantic.dev/X.Y/v/value_error
  '''
# ---
# name: test_model_copy_with_inconsistent_update[RealVariable]
  '''
  1 validation error for RealVariable
    Value error, The lower bound should be of size 5. [type=value_error, input_value={'size': 5, 'lower_bound'...bound': array([1., 1.])}, input_type=dict]
      For further information visit https://errors.pydantic.dev/X.Y/v/value_error
  '''
# ---
# name: test_multidimensional_bound[lower-IntegerVariable]
  '''
  1 validation error for IntegerVariable
    Value error, The lower bound has a dimension greater than 1. [type=value_error, input_value={'size': 2, 'lower_bound': array([[1., 2.]])}, input_type=dict]
      For further information visit https://errors.pydantic.dev/X.Y/v/value_error
  '''
# ---
# name: test_multidimensional_bound[lower-RealVariable]
  '''
  1 validation error for RealVariable
    Value error, The lower bound has a dimension greater than 1. [type=value_error, input_value={'size': 2, 'lower_bound': array([[1., 2.]])}, input_type=dict]
      For further information visit https://errors.pydantic.dev/X.Y/v/value_error
  '''
# ---
# name: test_multidimensional_bound[upper-IntegerVariable]
  '''
  1 validation error for IntegerVariable
    Value error, The upper bound has a dimension greater than 1. [type=value_error, input_value={'size': 2, 'upper_bound': array([[1., 2.]])}, input_type=dict]
      For further information visit https://errors.pydantic.dev/X.Y/v/value_error
  '''
# ---
# name: test_multidimensional_bound[upper-RealVariable]
  '''
  1 validation error for RealVariable
    Value error, The upper bound has a dimension greater than 1. [type=value_error, input_value={'size': 2, 'upper_bound': array([[1., 2.]])}, input_type=dict]
      For further information visit https://errors.pydantic.dev/X.Y/v/value_error
  '''
# ---
# name: test_non_positive_size[-1-IntegerVariable]
  '''
  1 validation error for IntegerVariable
  size
    Input should be greater than 0 [type=greater_than, input_value=-1, input_type=int]
      For further information visit https://errors.pydantic.dev/X.Y/v/greater_than
  '''
# ---
# name: test_non_positive_size[-1-RealVariable]
  '''
  1 validation error for RealVariable
  size
    Input should be greater than 0 [type=greater_than, input_value=-1, input_type=int]
      For further information visit https://errors.pydantic.dev/X.Y/v/greater_than
  '''
# ---
# name: test_non_positive_size[0-IntegerVariable]
  '''
  1 validation error for IntegerVariable
  size
    Input should be greater than 0 [type=greater_than, input_value=0, input_type=int]
      For further information visit https://errors.pydantic.dev/X.Y/v/greater_than
  '''
# ---
# name: test_non_positive_size[0-RealVariable]
  '''
  1 validation error for RealVariable
  size
    Input should be greater than 0 [type=greater_than, input_value=0, input_type=int]
      For further information visit https://errors.pydantic.dev/X.Y/v/greater_than
  '''
# ---
# name: test_type_is_not_settable[complex-IntegerVariable]
  '''
  1 validation error for IntegerVariable
    Value error, type is read-only; the inputs of a IntegerVariable are lower_bound, size and upper_bound. [type=value_error, input_value={'type': 'complex'}, input_type=dict]
      For further information visit https://errors.pydantic.dev/X.Y/v/value_error
  '''
# ---
# name: test_type_is_not_settable[complex-RealVariable]
  '''
  1 validation error for RealVariable
    Value error, type is read-only; the inputs of a RealVariable are lower_bound, size and upper_bound. [type=value_error, input_value={'type': 'complex'}, input_type=dict]
      For further information visit https://errors.pydantic.dev/X.Y/v/value_error
  '''
# ---
# name: test_type_is_not_settable[discrete-IntegerVariable]
  '''
  1 validation error for IntegerVariable
    Value error, type is read-only; the inputs of a IntegerVariable are lower_bound, size and upper_bound. [type=value_error, input_value={'type': <DataType.DISCRETE: 'discrete'>}, input_type=dict]
      For further information visit https://errors.pydantic.dev/X.Y/v/value_error
  '''
# ---
# name: test_type_is_not_settable[discrete-RealVariable]
  '''
  1 validation error for RealVariable
    Value error, type is read-only; the inputs of a RealVariable are lower_bound, size and upper_bound. [type=value_error, input_value={'type': <DataType.DISCRETE: 'discrete'>}, input_type=dict]
      For further information visit https://errors.pydantic.dev/X.Y/v/value_error
  '''
# ---
# name: test_type_is_not_settable[integer-IntegerVariable]
  '''
  1 validation error for IntegerVariable
    Value error, type is read-only; the inputs of a IntegerVariable are lower_bound, size and upper_bound. [type=value_error, input_value={'type': <DataType.INTEGER: 'integer'>}, input_type=dict]
      For further information visit https://errors.pydantic.dev/X.Y/v/value_error
  '''
# ---
# name: test_type_is_not_settable[integer-RealVariable]
  '''
  1 validation error for RealVariable
    Value error, type is read-only; the inputs of a RealVariable are lower_bound, size and upper_bound. [type=value_error, input_value={'type': <DataType.INTEGER: 'integer'>}, input_type=dict]
      For further information visit https://errors.pydantic.dev/X.Y/v/value_error
  '''
# ---
# name: test_type_is_not_settable[real-IntegerVariable]
  '''
  1 validation error for IntegerVariable
    Value error, type is read-only; the inputs of a IntegerVariable are lower_bound, size and upper_bound. [type=value_error, input_value={'type': <DataType.REAL: 'real'>}, input_type=dict]
      For further information visit https://errors.pydantic.dev/X.Y/v/value_error
  '''
# ---
# name: test_type_is_not_settable[real-RealVariable]
  '''
  1 validation error for RealVariable
    Value error, type is read-only; the inputs of a RealVariable are lower_bound, size and upper_bound. [type=value_error, input_value={'type': <DataType.REAL: 'real'>}, input_type=dict]
      For further information visit https://errors.pydantic.dev/X.Y/v/value_error
  '''
# ---
# name: test_unknown_field[IntegerVariable]
  '''
  1 validation error for IntegerVariable
  unknown
    Extra inputs are not permitted [type=extra_forbidden, input_value=0, input_type=int]
      For further information visit https://errors.pydantic.dev/X.Y/v/extra_forbidden
  '''
# ---
# name: test_unknown_field[RealVariable]
  '''
  1 validation error for RealVariable
  unknown
    Extra inputs are not permitted [type=extra_forbidden, input_value=0, input_type=int]
      For further information visit https://errors.pydantic.dev/X.Y/v/extra_forbidden
  '''
# ---
# name: test_wrong_boundaries[IntegerVariable]
  '''
  1 validation error for IntegerVariable
    Value error, The upper bounds must be greater than or equal to the lower bounds. [type=value_error, input_value={'size': 1, 'lower_bound': 0, 'upper_bound': -1}, input_type=dict]
      For further information visit https://errors.pydantic.dev/X.Y/v/value_error
  '''
# ---
# name: test_wrong_boundaries[RealVariable]
  '''
  1 validation error for RealVariable
    Value error, The upper bounds must be greater than or equal to the lower bounds. [type=value_error, input_value={'size': 1, 'lower_bound': 0, 'upper_bound': -1}, input_type=dict]
      For further information visit https://errors.pydantic.dev/X.Y/v/value_error
  '''
# ---
